[package]
name = "travelling-salesman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8.16"
csv = "1.2.2"
num_cpus = "1.16.0"
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
threadpool = "1.8.1"
